<resources>
    <string name="app_name">Agenda Online</string>

    <!--MAIN ACTIVITY-->
    <string name="btn_login">Login</string>
    <string name="btn_registro">Registro</string>

    <!--REGISTER.xml ACTIVITY-->
    <string name="CrearCuentaTXT">Crear una cuenta</string>
    <string name="NombreET">Nombres</string>
    <string name="CorreoET">Correo electronico</string>
    <string name="ContraseñaET">Contraseña</string>
    <string name="ConfirmarContraseñaET">Confirmar Contraseña</string>
    <string name="RegistrarUsuario">Registrar</string>
    <string name="TengoUnaCuentaTXT">Tengo una cuenta</string>
    <string name="FechaNacimiento">Fecha de Nacimiento</string>


    <!--REGISTER.java ACTIVITY-->
    <string name="tituloActionBar">Registrar</string>
    <string name="tituloProgressDialog">Epere un momento, por favor</string>
    <string name="toastIngreseNombre">Ingrese nombre</string>
    <string name="toastIngreseCorreo">Ingrese correo electronico valido</string>
    <string name="toastIngreseContraseña">Ingrese Contraseña</string>
    <string name="toastIngreseConfirmeContraseña">Confirme Contraseña</string>
    <string name="messageProgressDialog">Creando su cuenta...</string>
    <string name="onFailure">""</string>
    <string name="messageSaveProgressDialog">Guardando su informacion</string>
    <string name="messageCuentaCreada">Cuenta creada con exito</string>
    <string name="compararPassword">La Contraseña no coincide</string>


    <!--MENU_PRINCIPAL-->

    <string name="salirApp">Cerraste sesion exitosamente</string>
    <string name="BienvenidoPrincipal">Bienvenido(a)</string>
    <string name="NombresPrincipal"> -- </string>
    <string name="CorreoPrincipal"> -- </string>
    <string name="IDPrincipal"> -- </string>
    <string name="EstadoCuentaPrincipal">No verificado</string>
    <string name="tituloMenuPrincipalActionBar">Agenda Online</string>

    <string name="AgregarNota">Agregar</string>
    <string name="ListarNotas">Mis Notas</string>
    <string name="ArchivarNotas">Archivados</string>
    <string name="Contactos">Contactos</string>
    <string name="AcercaDe">Acerca de</string>
    <string name="CerrarSesion">Cerrar Sesion</string>
    <!--LOGIN-->
    <string name="IniciarSesionTXT">Iniciar Sesion</string>
    <string name="CorreoLogin">Correo</string>
    <string name="LoginPass">Contraseña</string>
    <string name="btn_logeo">Entrar</string>
    <string name="UsuarioNuevoTXT">¿No tienes una cuenta? Registrate</string>
    <string name="titleActionBarLogin">Login</string>
    <string name="messageInicioSesionProgressDialog">Iniciando sesion...</string>
    <string name="welcomeUserMessage">Bienvenido(a): </string>
    <string name="loginFailure">Verifique si el correo y contraseña son correctos</string>


    <!--AGREGAR NOTA-->
    <string name="Uid_Usuario">ID Usuario</string>
    <string name="Correo_Usuario">Correo de Usuario</string>
    <string name="Fecha_Hora_Actual_TXT">Fecha de registro</string>
    <string name="Fecha_Hora_Actual">Fecha y hora actual</string>
    <string name="Titulo_Nota">Titulo </string>
    <string name="Descripcion">Descripcion</string>
    <string name="btn_Calendario">Calendario</string>
    <string name="Fecha"> 00/00/0000 </string>
    <string name="Estado"> No finalizado</string>
    <string name="validarDatosError">Rellenar todos los campos</string>
    <string name="agregarNotaExito">Nota agregada con exito</string>

    <!--MENU ACTIONBAR-->
    <string name="AgregarNota_BD">Añadir</string>
    <string name="ActualizarNota_BD">Actualizar</string>
    <string name="Perfil_Usuario">Mi Perfil</string>

    <!--ITEM Nota-->
    <string name="Id_Nota_Item">Id nota</string>
    <string name="Uid_Usuario_Item">ID Usuario</string>
    <string name="Correo_Usuario_Item">Correo de Usuario</string>
    <string name="Fecha_Hora_registro_Item">Fecha y hora registrada</string>
    <string name="Titulo_Nota_Item">Titulo </string>
    <string name="Descripcion_Item">Descripcion</string>
    <string name="Fecha_Item"> 00/00/0000 </string>
    <string name="Estado_Item"> No finalizado</string>

    <!--ListarNotas-->
    <string name="tituloActionBarListarNotas">Mis notas</string>

    <!--CUADRO DIALOGO OPCIONES -->
    <string name="ElijaOpcionTXT">Elija una opcion</string>
    <string name="CD_Eliminar">Eliminar</string>
    <string name="CD_Actualizar">Actualizar</string>
    <string name="alertDialogTitleEliminar">Eliminar Nota</string>
    <string name="alertDialogMessageEliminar">¿Seguro que quieres eliminar dicha nota?</string>
    <string name="notaEliminadaAlertDialog">Nota eliminada</string>
    <string name="alertDialogBorrarcancelado">Cancelado el borrado de la nota</string>

    <!--CUADRO DE DIÁLOGO - ELEGIR IMAGEN DE-->


    <string name="ElegirImagenTXT">Elegir imagen de:</string>

    <string name="Btn_Elegir_Galeria">Galería</string>

    <string name="Btn_Elegir_Camara">Cámara</string>

    <!--Actualizar Nota-->
    <string name="actionBarTitleActualizar">Actualizar Nota</string>
    <string name="Id_nota_Actualizar">Id nota</string>
    <string name="Uid_Usuario_Actualizar">ID Usuario</string>
    <string name="Correo_Usuario_Actualizar">Correo de Usuario</string>
    <string name="Fecha_Hora_registro_Actualizar">Fecha registro</string>
    <string name="Titulo_Nota_Actualizar">Titulo </string>
    <string name="Descripcion_Actualizar">Descripcion</string>
    <string name="btn_Calendario_Actualizar">Calendario</string>
    <string name="Fecha_Actualizar"> 00/00/0000 </string>
    <string name="Estado_Actualizar"> No finalizado</string>
    <string name="Estado_Nuevo"> -- </string>
    <string name="notaActualizadaExito">Nota actualizada con exito</string>

    <!--SPINNER-->
    <string-array name="Estados_Nota">
        <item>"No Finalizado"</item>
        <item>"Finalizado"</item>
    </string-array>

    <!--PERFIL USUARIO-->
    <string name="Uid_perfil">Uid</string>
    <string name="Nombre_Perfil">Nombre</string>
    <string name="Apellidos_Perfil">Mis apellidos</string>
    <string name="Correo_Perfil">Correo electronico</string>
    <string name="Edad_Perfil">Edad</string>
    <string name="Telefono_Perfil">Telefono</string>
    <string name="Domicilio_Perfil">Domicilio</string>
    <string name="GuardarDatos_Perfil">Guardar Datos</string>

    <!-- Perfil Usuario (Imagen de Perfil)-->
    <string name="btnElegirImagen">Elegir imagen de</string>
    <string name="btnActualizarImagen">Actualizar Imagen</string>

</resources>