<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarNota.AgregarNota">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
    <!--ID del USUARIO-->
        <TextView
            android:id="@+id/Uid_Usuario"
            android:textSize="18dp"
            android:fontFamily="@font/opensanssemibold"
            android:hint="@string/Uid_Usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!--Correo del Usuario-->
        <TextView
            android:id="@+id/Correo_Usuario"
            android:textSize="18dp"
            android:fontFamily="@font/opensanssemibold"
            android:hint="@string/Correo_Usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!--Fecha_Hora_Actual-->
        <TextView
            android:id="@+id/Fecha_Hora_Actual"
            android:textSize="18dp"
            android:fontFamily="@font/opensanssemibold"
            android:hint="@string/Fecha_Hora_Actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Titulo-->
        <EditText
            android:id="@+id/Titulo_Nota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Titulo_Nota"
            android:layout_marginTop="10dp"
            android:textSize="20dp"

            android:fontFamily="@font/opensansbold"/>

        <!--Descripcion-->
        <EditText
            android:id="@+id/Descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Descripcion"
            android:minHeight="150dp"
            android:gravity="start"
            android:textSize="25dp"
            android:fontFamily="@font/opensanssemibold"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <!--Abrir calendario-->
            <Button
                android:id="@+id/btn_Calendario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_Calendario"
                app:icon="@drawable/icono_calendario"/>

            <!--Visualizar fecha elegida-->
            <TextView
                android:id="@+id/Fecha"
                android:hint="@string/Fecha"
                android:textSize="20dp"
                android:fontFamily="@font/opensanslight"
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Estado de la nota-->
        <TextView
            android:id="@+id/Estado"
            android:text="@string/Estado"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:fontFamily="@font/opensanslight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>