<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardUseCompatPadding="true"
    android:padding="0.2dp"
    app:cardCornerRadius="10dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <!--ICONO-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/icono_item_nota"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="7dp">

            <!--Uid de nota-->
            <TextView
                android:id="@+id/Id_Nota_Item"
                android:text="@string/Id_Nota_Item"
                android:visibility="gone"
                android:fontFamily="@font/opensansbold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--Uid de usuario-->
            <TextView
                android:id="@+id/Uid_Usuario_Item"
                android:text="@string/Uid_Usuario_Item"
                android:visibility="gone"
                android:fontFamily="@font/opensansbold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--Correo de usuario-->
            <TextView
                android:id="@+id/Correo_Usuario_Item"
                android:text="@string/Correo_Usuario_Item"
                android:visibility="gone"
                android:fontFamily="@font/opensansbold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--Fecha y hora de registro-->
            <TextView
                android:id="@+id/Fecha_Hora_registro_Item"
                android:text="@string/Fecha_Hora_registro_Item"
                android:visibility="gone"
                android:fontFamily="@font/opensansbold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--Titulo de la nota-->
            <TextView
                android:id="@+id/Titulo_Nota_Item"
                android:text="@string/Titulo_Nota_Item"
                android:textSize="25sp"
                android:fontFamily="@font/opensansbold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--Descripción de la nota-->
            <TextView
                android:id="@+id/Descripcion_Item"
                android:text="@string/Descripcion_Item"
                android:textSize="18sp"
                android:fontFamily="@font/opensansbold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--Fecha de la nota-->
            <TextView
                android:id="@+id/Fecha_Item"
                android:text="@string/Fecha_Item"
                android:textSize="18sp"
                android:fontFamily="@font/opensansbold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--Estado de la nota-->
            <TextView
                android:id="@+id/Estado_Item"
                android:text="@string/Estado_Item"
                android:visibility="gone"
                android:fontFamily="@font/opensansbold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>