<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CrearCuentaTXT"
            android:fontFamily="@font/opensansmedium"
            android:textSize="25dp"
            android:gravity="center"/>

        <!--Animacion-->
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="registro.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <!--un componente de diseño que viene con la biblioteca de soporte de diseño de materiales.-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/nombreET"
                android:hint="@string/NombreET"
                android:inputType="textPersonName|textCapWords"
                android:padding="20dp"
                android:fontFamily="@font/opensansmedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icono_nombres"
                android:drawablePadding="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/CorreoET"
                android:hint="@string/CorreoET"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:fontFamily="@font/opensansmedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icono_correo"
                android:drawablePadding="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/ContraseñaET"
                android:hint="@string/ContraseñaET"
                android:inputType="textPassword"
                android:padding="20dp"
                android:fontFamily="@font/opensansmedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icono_password"
                android:drawablePadding="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/ConfirmarContraseñaET"
                android:hint="@string/ConfirmarContraseñaET"
                android:inputType="textPassword"
                android:padding="20dp"
                android:fontFamily="@font/opensansmedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icono_password"
                android:drawablePadding="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/RegistrarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RegistrarUsuario"
            android:fontFamily="@font/opensansbold"
            android:textSize="18dp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/TengounacuentaTXT"
            android:text="@string/TengoUnaCuentaTXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:fontFamily="@font/opensansbold"
            android:layout_marginTop="15dp"/>




    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>